# datalove

./: .eslintrc.js  .gitignore  .gitmodules  ABOUT.md  CHANGELOG.md  Cargo.toml  Datalove.lean  Demo.lean  General_FAQ.md  HVM.lean  INSTALL.md  INTRO.md  LICENSE  NEWS.md  NOTES.md  README.md  Technical_FAQ.md  bower.json  config.toml  ethereum.json  flake.nix  index.android.js  index.ios.js  lakefile.lean  lean-toolchain  mix.exs  package-lock.json  package.json  packages.json  ripple-test.html  rust-toolchain.toml  shell.nix  smart.json  test.html  tsconfig.lib.json  wufi-client.html  wufi-client.js
circuits/: Cargo.toml
circuits/examples/: mimc.rs
circuits/src/: lib.rs  mimc.rs
components/persona/: Cargo.toml
components/persona/core/: .gitignore  Cargo.toml
components/persona/core/src/: device.rs  error.rs  lib.rs  proof.rs  util.rs  zksm.rs
components/persona/core/src/device/: mod.rs
components/persona/core/src/persona/: group.rs  mod.rs  ops.rs  state.rs
components/persona/core/tests/: v1.rs  zksm.rs
components/persona/methods/: Cargo.toml  build.rs
components/persona/methods/guest/: Cargo.toml
components/persona/methods/guest/src/: main.rs
components/persona/methods/v1/: Cargo.toml  main.rs
components/persona/methods/v1/src/: main.rs
components/persona/methods/zksm/: Cargo.toml  main.rs
components/persona/src/: lib.rs
components/persona/src/keystore/: file.rs  mod.rs
core/: Cargo.toml
core/src/: ledger.rs  lib.rs  types.rs
core/src/history/: ledger.rs  mod.rs  multiledger.rs  operation.rs  transaction.rs
core/src/ledger/: mod.rs
core/src/operations/: base.rs  decrease_limit.rs  increase_limit.rs  mod.rs  payment.rs  set_exchange_rate.rs
core/src/transactions/: base.rs  basic.rs  end_htl.rs  mod.rs  start_htl.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  peer.rs  service.rs
crates/core/src/admin/: mod.rs
crates/core/src/crypto/: mod.rs
crates/core/src/drivers/: _db.rs  _interface.rs  keystore.rs  mod.rs
crates/core/src/group/: mod.rs
crates/core/src/interfaces/: mod.rs  peer.rs  root.rs
crates/core/src/interfaces/.external/: mod.rs
crates/core/src/interfaces/protocol/: mod.rs
crates/core/src/ledger/: types.rs
crates/core/src/time/: mod.rs  types.rs
crates/core/src/types/: device.rs
crates/core/src/types/user/: mod.rs
crates/core/src/user/: mod.rs  query.rs  types.rs
crates/iroh-nats/: Cargo.toml
crates/iroh-nats/src/: api.rs  codec.rs  config.rs  error.rs  iroh.rs  lib.rs  main.rs
crates/iroh-nats/src/cluster/: mod.rs
crates/iroh-nats/src/core/: info.rs  mod.rs
crates/iroh-nats/src/jetstream/: consumer.rs  mod.rs
crates/nats-p2p/: Cargo.toml  README.md
crates/nats-p2p/docs/: ACTORS.mmd  FLOW.mmd  TODO.md
crates/nats-p2p/src/: config.rs  error.rs  iroh.rs  lib.rs  server.rs
crates/nats-p2p/src/cluster/: mod.rs
crates/nats-p2p/src/core/: codec.rs  command.rs  message.rs  mod.rs  pubsub.rs  session.rs  subject.rs
crates/nats-p2p/src/flow/: bind.rs  framed.rs  kvs.rs  mod.rs  pubsub.rs
crates/nats-p2p/src/jetstream/: message.rs  mod.rs  session.rs
crates/nats-p2p/tests/: async_nats.rs  check_test.rs
crates/nats-p2p/tests/async_nats/: client.rs  client_test.rs
crates/persona/: Cargo.toml  README.md
crates/persona/src/: interfaces.rs
crates/persona/src/v0/: mod.rs
crates/root/: .gitignore  Cargo.toml
crates/root/circuits/: NOTES.md
crates/root/circuits/keytree/: Zargo.toml
crates/root/circuits/ledger/: Zargo.toml
crates/root/src/: lib.rs
crates/root/src/clock/: bloom.rs  cuckoo.rs  mod.rs  tiny.rs
crates/root/src/keystore/: file.rs  keyring.rs  mod.rs
crates/root/src/time/: mod.rs
crates/root/src/user/: mod.rs
crates/root/zinc-circuits/clock/: Zargo.toml
crates/time/: Cargo.toml  README.md
crates/time/src/: interfaces.rs  lib.rs
crates/time/src/v0/: mod.rs  value.rs  var.rs
dna/zomes/basic/code/: Cargo.toml
dna/zomes/core/code/: Cargo.toml
examples/sampleipld/: Cargo.toml  main.rs
persona/persona-core/: Cargo.toml  README.md
persona/persona-core/src/: lib.rs
persona/persona-core/src/vault/: error.rs  file.rs  memory.rs  mod.rs
persona/persona-core/src/wallet/: error.rs  mod.rs  pattern.rs  signatory.rs
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/core/src/history/: multiledger.rs
rust/core/src/ledger/: mod.rs
rust/core/src/operations/: base.rs  context.rs  decrease_limit.rs  increase_limit.rs  mod.rs  payment.rs  set_exchange_rate.rs
rust/core/src/state_tree/: ledger.rs  mod.rs  multiledger.rs
rust/core/src/transactions/: base.rs  basic.rs  context.rs  end_htl.rs  mod.rs  start_htl.rs
rust/genomes/datalove/: .gitignore
rust/ipld_core/: Cargo.toml
rust/ipld_core/src/: block.rs  cid.rs  error.rs  format.rs  lexer.rs  lib.rs  multibase.rs  rustler.rs
rust/ipld_core/src/cownode/: mod.rs
rust/ipld_core/src/format/: encoder.rs  mod.rs  token.rs
rust/ipld_core/src/freenode/: de.rs  float.rs  int.rs  key.rs  mod.rs  ser.rs  serde.rs
rust/ipld_core/src/node/: float.rs  int.rs  iter.rs  key.rs  mod.rs
rust/ipld_core/src/selector/: mod.rs
rust/ipld_dag/: Cargo.toml
rust/ipld_dag/src/: base.rs  cid.rs  dag.rs  error.rs  format.rs  lib.rs  link.rs
rust/ipld_dag/src/dag/: de.rs  float.rs  int.rs  key.rs  lexer.rs  link.rs  mod.rs  ser.rs  token.rs
rust/ipld_dag_json/: Cargo.toml  tokenizer.rs
rust/ipld_dag_json/src/: cid.rs  encoder.rs  error.rs  lib.rs  parser.rs  tokenizer.rs
rust/nodejs-conductor/: .gitignore
rust/nodejs-conductor/native/: Cargo.toml
rust/nodejs-conductor/native/src/: conductor.rs  lib.rs
rust/xerde/: Cargo.toml  README.md
rust/xerde/src/: atoms.rs  de.rs  error.rs  lib.rs  ser.rs
rust/xerde/src/de/: mod.rs
rust/xerde/src/ser/: compound.rs  error.rs  mod.rs
wasiplay/: .gitignore  Cargo.toml  README.md
wasiplay/examples/: ipld.rs
wasiplay/examples/ipld/: Cargo.toml  main.rs
wasiplay/src/: demo.rs
wasiplay/src/host/: mod.rs
wasiplay/src/runtime/: mod.rs
wasiplay/src/wasi/: hostcalls.rs  instantiate.rs  mod.rs  syscalls.rs
(+272 files in other folders)
