[workspace]
version = "0.0.1"
resolver = "2"
members = [
  # binaries, uis
  "app/src-ui",
  "app/src-tauri",

  # libs
  "crates/nats-p2p",
  # "crates/runtime",
  # "crates/persona",
  # "crates/persona/core",
  # "crates/persona/methods",
]
exclude = [
]

[workspace.package]
version = "0.0.1"
authors = ["sunny-g"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/datalove-app/datalove"
repository = "https://github.com/datalove-app/datalove"
readme = "./README.md"
keywords = ["p2p", "webassembly"]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# self
nats-p2p = { path = "crates/nats-p2p" }

# docs
aquamarine = { version = "0.5" }

# binary, runtime deps
dirs = { version = "5.0", default-features = false }
clap = { version = "4.5.0", default-features = false }

# general
anyhow = { version = "1.0", default-features = false }
# async-wormhole = { version = "0.3.7", default-features = false }
# bytemuck = { version = "1.14", default-features = false }
bytes = { version = "1.5", default-features = false }
# coerce = { version = "0.8", default-features = false }
dashmap = { version = "5.5", default-features = false }
futures = { version = "0.3", default-features = false }
# futures-channel = { version = "0.3", default-features = false }
# futures-util = { version = "0.3", default-features = false }
# hex = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.36", default-features = false }
tower = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-futures = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tracing-subscriber-wasm = { version = "0.1", default-features = false }

# wasm
wasm_component_layer = { version = "0.1.15", default-features = false }
wasm_runtime_layer = { version = "0.2", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }
wit-bindgen = { version = "0.17", default-features = false }
wit-bindgen-rust = { version = "0.17", default-features = false }
wit-deps = { version = "0.3", default-features = false }

# wasmer = { version = "4.2", default-features = false }
# wasmer-wasix = { version = "0.14", default-features = false }
# wasmer-wasix-experimental-io-devices = { version = "0.14", default-features = false }
# # wai
# wai-bindgen-rust = { version = "0.2.3", default-features = false }
# wai-bindgen-wasmer = { version = "0.14", default-features = false }
# wasm-bpf-rs = { path = "vendor/wasm-bpf/runtime/wasm-bpf-rs" }

# p2p
iroh = { version = "0.12", default-features = false }
iroh-gossip = { version = "0.12", default-features = false }
iroh-net = { version = "0.12", default-features = false }
iroh-sync = { version = "0.12", default-features = false }

# crypto, zk
# borsh = { version = "1.2", default-features = false }
# cid = { version = "0.10", default-features = false }
# crypto-bigint = { version = "0.5", default-features = false, features = [] }
# digest = { version = "0.10", default-features = false }
# ed25519-dalek = { version = "2.1", default-features = false }
# k256 = { git = "https://github.com/risc0/rustcrypto-elliptic-curves", branch = "risc0" }
# pqc_kyber = {version = "0.7.1", default-features = false }
# merkle-log = { version = "0.0.9", default-features = false }
rand = { version = "0.8", default-features = false }
# sha2 = { version = "0.10", default-features = false }
# signature = { version = "2.2", default-features = false }
# veilid-core = { version = "0.2.3", default-features = false, features = [
#   "enable-crypto-vld0",
#   "rt-tokio",
# ] }
zeroize = { version = "1.7", default-features = false }

# risc0-build = { version = "0.20.0-alpha.1", default-features = false }
# risc0-zkp = { version = "0.20.0-alpha.1", default-features = false }
# risc0-zkvm = { version = "0.20.0-alpha.1", default-features = false }



# [profile.dev]
# opt-level = 3

# [profile.dev-build-override]
# opt-level = 3

# [profile.release]
# debug = 1
# lto = true

# [profile.release.build-override]
# opt-level = 3
