[package]
name = "datalove-circuits"
version = "0.0.1"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[[example]]
name = "mimc"
path = "examples/mimc.rs"

[dependencies]
ark-bn254 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", default-features = false }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

[features]
default = ["parallel"]
std = ["ark-ec/std", "ark-ff/std", "ark-groth16/std", "ark-relations/std", "ark-std/std"]
parallel = ["std", "ark-ff/parallel", "ark-ff/parallel", "ark-groth16/parallel", "ark-std/parallel"]
