[package]
name = "datalove-core"
version = "0.0.1"
authors = ["Sunny G <sunny.gonna@gmail.com>"]
readme = "README.md"
categories = ["p2p", "cryptocurrency"]
license = "MIT"
edition = "2018"

[dependencies]
# failure = "0.1.3"
# failure_derive = "0.1.3"
lazy_static = "1.1.0"
quick-error = "1.2"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]
