[package]
name = "wasiplay"
version = "0.1.0"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

################################################################################
# WASI libs
#
# datalove_wasi::runtime:
#   - uses and is modelled after `wasmtime`
# datalove_wasi::wasi:
#   - modelled after `wasmtime-wasi`
################################################################################
# demo using WASI executor
#
# uses `datalove_wasi::Host` to execute a sample WASI app (eventually one using libipld-schema)
# - `$ cargo run --example demo`
################################################################################
[[bin]]
name = "demo"
path = "src/demo.rs"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
env_logger = "^0.7"
lazy_static = "1"
log = { version = "0.4.8", default-features = false }
lucet-runtime = "^0.5"
wasi-common = "^0.8"
