[package]
name = "datalove-core"
version = "0.0.1-alpha.1"
description = "core datalove traits and types"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
async-trait-ext = "0.2"
cid = "0.5.1"
crdts = "4.2"
did_common = "0.3.0"
futures = "0.3"
libp2p-core = "0.21.0"
libp2p-swarm = "0.21.0"
serde = "1.0.115"
thiserror = "1.0"

# bellman = { package = "bellman_ce", version = "0.3" }
# ff = { package = "ff_ce", version = "0.6", features = ["derive"] }
# franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto" }
# models = { git = "https://github.com/matter-labs/rollup" }
# pairing = { package = "pairing_ce", version = "0.19" }
