[package]
name = "datalove-core"
version = "0.0.1"
description = "core datalove traits, types, as well as internal architecture and protocol definitions"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
cid = "0.5.1"
ed25519 = "1.0.3"
futures = "0.3.8"
lazy_static = "1.4"
libp2p-core = "0.23"
libp2p-swarm = "0.23"
num-traits = "0.2"
serde = "1.0"
thiserror = "1.0"
uuid = "0.8.1"

# bellman = { package = "bellman_ce", version = "0.3" }
# ff = { package = "ff_ce", version = "0.6", features = ["derive"] }
# franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto" }
# models = { git = "https://github.com/matter-labs/rollup" }
# pairing = { package = "pairing_ce", version = "0.19" }
