[package]
name = "datalove-core"
version = "0.0.1"
description = "core datalove traits, types, as well as internal architecture and protocol definitions"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
# anyhow = "1.0"
# async-trait = "0.1"
# async-trait-ext = "0.2"
cid = "0.5.1"
# crdts = "4.2"
# did_common = "0.3.0"
futures = "0.3.8"
lazy_static = "1.4"
libp2p-core = "0.23"
libp2p-swarm = "0.23"
num-traits = "0.2"
serde = "1.0"
thiserror = "1.0"
uuid = "0.8.1"
# crypto
# schnorrkel = "0.9" TODO: await support for accountable subgroup signatures
asm-ed25519 = { path = "../../vendor/asm-ed25519" }
curve25519-dalek = "3.0"
ed25519 = "1.0"
ed25519-dalek = "1.0"
# hd-ed25519 = "0.0.1"
# frost-dalek = { path = "../../vendor/frost-dalek" }
# multi-party-eddsa = { path = "../../vendor/multi-party-eddsa" }

# bellman = { package = "bellman_ce", version = "0.3" }
# ff = { package = "ff_ce", version = "0.6", features = ["derive"] }
# franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto" }
# models = { git = "https://github.com/matter-labs/rollup" }
# pairing = { package = "pairing_ce", version = "0.19" }
