[package]
name = "nats-p2p"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "nats-p2p-server"
path = "bin/main.rs"

[dependencies]
# bin
anstyle = { workspace = true }
clap = { workspace = true, features = [
  "derive",
  "std",
] }
dirs = { workspace = true }
rpassword = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "env-filter",
  "fmt",
  "registry",
  "std",
] }
ssh-key = { version = "0.6", features = [
  "ed25519",
  "encryption",
  "std",
] }

# async
# flume = { version = "0.11", default-features = false, features = [
#   "async",
#   "eventual-fairness",
#   "select",
# ] }
futures = { workspace = true }
ractor = { version = "0.9.6", default-features = false, features = [
  # "cluster",
  "tokio_runtime",
]}
# ractor_cluster = { version = "0.9.6", default-features = false }
# ractor_actors = { version = "0.4", default-features = false, features = [
#   "net",
#   "streams",
#   "time",
# ] }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "tracing",
] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["codec"] }

# general
anyhow = { workspace = true }
async-nats = { version = "0.34", default-features = false, features = [
  "service",
] }
bytes = { workspace = true, features = [
  "serde",
  "std",
] }
dashmap = { workspace = true, features = [
  "inline"
]}
iroh = { workspace = true }
iroh-gossip = { workspace = true }
iroh-net = { workspace = true }
iroh-sync = { workspace = true }
memchr = { version = "2.7", default-features = false, features = [
  "std",
] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = [
  "log",
  "std",
] }
# trie-rs = { version = "0.2", default-features = false }
zeroize = { workspace = true }

# misc
aquamarine = { workspace = true }

[features]
default = []
debug = ["tracing/log-always"]
