[package]
name = "datalove-root"
version = "0.0.1"
description = "types and interfaces for datalove's cryptographic and networked root of trust"
authors = ["sunny-g <sunny.gonna@gmail.com>"]
edition = "2018"

[dependencies]
datalove-core = { path = "../core" }
num-bigint = "0.3"
rand = "0.7"
rayon = { version = "1", optional = true }
serde = "1.0"

[dev-dependencies]
rand_xorshift = { version = "0.2" }
algebra = { git = "https://github.com/scipr-lab/zexe", default-features = false, features = ["bls12_381"] }

[features]
default = [ "std", "parallel" ]
std = [
]
parallel = [
  "rayon"
]

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
chacha20poly1305 = "0.1"
keyring = "0.10"
pwbox = { version = "0.3", features = ["pure"], default-features = false }
toml = "0.5"
zeroize = "1.1"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
security-framework = "2.0.0"
